Convert to java.nio